# asteroids_clone_sdl

./: .gitignore  CMakeLists.txt  vcpkg.json
src/: Animation.cpp  Animation.h  Asteroid.cpp  Asteroid.h  AsteroidsGame.cpp  AsteroidsGame.h  BoxCollider.cpp  BoxCollider.h  Button.cpp  Button.h  CollisionSystem.cpp  CollisionSystem.h  GameObject.cpp  GameObject.h  Laser.cpp  Laser.h  Player.cpp  Player.h  Rect.h  Rect.inl  Scene.h  SoundEffect.cpp  SoundEffect.h  Sprite.cpp  Sprite.h  StartMenu.cpp  StartMenu.h  Texture.cpp  Texture.h  Vector2.cpp  Vector2.h  Vector2.inl  Window.cpp  Window.h  main.cpp
